# wiki

./: .env.example  .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yaml  deploy.yml  sync_readme.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts  var.css
docs/explore/aerospace/: apod.md  tsiolkovsky.md
docs/explore/ai/: fine-tuning.md  post-training.md
docs/explore/basic/: logits.md  riemann.md
docs/explore/history/: bronze_ware.md
docs/explore/interesting/: Vladivostok.md  memes.md
docs/explore/math/: kakeya.md  riemann.md
docs/explore/quantum/: what.md
docs/ml/: index.md
docs/ml/ai/: GRPO.md  IL_survey.md  agent.md  rag.md
docs/ml/math/: index.md
docs/ml/papers/: AI_Oscars.md  GRPO.md  minestudio.md  optimus2.md  papers.md
docs/ml/rl/: bellman.md  dp.md  dqn.md  further.md  llm_rl.md  mc.md  mdp.md  nw.md  pg.md  ppo.md  rl.md  rl4llm.md  td.md
docs/skills/: hello.md  index.md
docs/skills/automation/: action.md  docker.md  server.md  toml.md  uv.md
docs/skills/eda/: hello_cda.md
docs/skills/markdown/: latex.md  learningmd.md
docs/skills/python/: io.md  ruff.md  toml.md  uv.md
docs/skills/rl/: bellman.md  mdp.md  pg.md  (+2 more)
docs/studying/: index.md
docs/thinking/: DS-MoE.md  Marco1.md  index.md
docs/thoughts/: 2024.md  cyberpunk.md  friendship.md  hello.md  meaning_of_egames.md  metaphor.md  next.md  talk01.md  talk02.md
scripts/: get_apod.py  hello_toml.py  hello_toml.toml  requirements.txt  sync_blog_to_readme.py  test.py
(+10 files in other folders)
