[project]
name = "stupeter12138-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nasa-apod>=1.0.3",
    "nbconvert>=7.16.6",
    "openai>=1.78.0",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
